# ai-agent-text-to-json

./: .gitignore  LICENSE  README.md  clients.py  main.py  pyproject.toml  settings.py
agent/: graph.py  nodes.py  prompts.py  state.py
chunking/: semantic.py
src/text_to_json/: __init__.py
src/text_to_json/api/: __init__.py  main.py
src/text_to_json/tools/: __init__.py  apply_patches.py  inspect_keys.py  json_pointer.py  read_value.py  search_pointer.py
tests/: test_apply_patches.py  test_chunking.py  test_inspect_keys.py  test_nodes.py  test_read_value.py  test_search_pointer.py  test_state.py  test_truncator.py  test_update_guidance.py
tools/: __init__.py  apply_patches.py  inspect_keys.py  read_value.py  search_pointer.py  update_guidance.py
ui/: __init__.py  rich_display.py
