[project]
name = "text-to-json"
version = "0.1.0"
description = "Agente LangGraph para extrair dados estruturados de texto em JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.4",
    "langchain-experimental>=0.3.4",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
text-to-json = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "chunking"]
